--- a/model/model_assays.ipynb
+++ b/model/model_assays.ipynb
@@ -6,26 +6,49 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dandreas/.conda/envs/deepV_a100/lib/python3.10/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n",
+      "/home/dandreas/.conda/envs/deepV_a100/lib/python3.10/site-packages/transformers/utils/generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_CANCER_TYPE_3MinMutations_169MinCancerType.csv\n",
-      "n labels: 53\n",
+      "0 \t BINARYdata_CANCER_TYPE_0_00percentMinCancerType.csv\n",
+      "12 \t BINARYdata_CANCER_TYPE_0_10percentMinCancerType.csv\n",
+      "2 \t BINARYdata_CANCER_TYPE_1_00percentMinCancerType.csv\n",
+      "4 \t BINARYdata_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
+      "11 \t BINARYdata_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
+      "9 \t BINARYdata_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
+      "6 \t data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
+      "5 \t data_CANCER_TYPE_0_10percentMinCancerType.csv\n",
+      "10 \t data_CANCER_TYPE_1_00percentMinCancerType.csv\n",
+      "1 \t data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
+      "3 \t data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
+      "7 \t data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
+      "8 \t label_mappings\n",
+      "data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
+      "n labels: 108\n",
       "loading data from ../aa/tumors.pkl\n",
       "loading data from ../aa/assays.pkl\n"
      ]
     }
    ],
    "source": [
-    "from custom_dataset import Dataset_Assay, custom_collate_assay\n",
+    "from custom_dataset import Dataset_Assay, Dataset_Assay_Survival, custom_collate_assay, custom_collate_assay_survival\n",
     "from models import *\n",
     "from saveAndLoad import *\n",
     "\n",
     "# LOAD DATA\n",
     "data_dir = '../labeled_data/'\n",
     "labeled_data = os.listdir(data_dir)\n",
-    "# for ni,i in sorted(zip(labeled_data,range(len(labeled_data)))):print(i,'\\t',ni)\n",
-    "data_emb = labeled_data[17]\n",
+    "for ni,i in sorted(zip(labeled_data,range(len(labeled_data)))):print(i,'\\t',ni)\n",
+    "data_emb = labeled_data[6]\n",
     "print(data_emb)\n",
     "data_df_emb = pd.read_csv(data_dir+data_emb)\n",
     "\n",
@@ -36,21 +59,57 @@
     "mut_embeddings = np.load('../aa/canonical_mut_average_embeddings_esm2.npy')\n",
     "ref_embeddings = np.load('../aa/canonical_ref_embeddings_esm2.npy')\n",
     "tumors = pickleLoad('../aa/tumors.pkl')\n",
-    "assays = pickleLoad('../aa/assays.pkl')\n",
-    "\n",
-    "dataset = Dataset_Assay(data_df_emb, mut_embeddings, ref_embeddings, tumors, assays, device)\n",
-    "train_loader, test_loader = getTrainTestLoaders(dataset, batch_size = 100, collate=custom_collate_assay)"
+    "assays = pickleLoad('../aa/assays.pkl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
+      "159445 samples\n",
+      "142745 unique patients\n",
+      "108 labels\n",
+      "\n",
+      "data_CANCER_TYPE_0_10percentMinCancerType.csv\n",
+      "157887 samples\n",
+      "141445 unique patients\n",
+      "53 labels\n",
+      "\n",
+      "data_CANCER_TYPE_1_00percentMinCancerType.csv\n",
+      "138303 samples\n",
+      "124702 unique patients\n",
+      "20 labels\n",
+      "\n",
+      "data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
+      "159445 samples\n",
+      "142745 unique patients\n",
+      "783 labels\n",
+      "\n",
+      "data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
+      "141057 samples\n",
+      "127155 unique patients\n",
+      "143 labels\n",
+      "\n",
+      "data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
+      "82664 samples\n",
+      "75447 unique patients\n",
+      "17 labels\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "## HYPERPARAMS\n",
-    "num_epochs = 10\n",
-    "learning_rate = 0.001"
+    "for i in [6,5,10,1,3,7]:\n",
+    "    print(labeled_data[i])\n",
+    "    df = pd.read_csv(data_dir+labeled_data[i])\n",
+    "    Dataset_Assay(df,mut_embeddings,ref_embeddings,tumors,assays,'cpu')\n",
+    "    print('')"
    ]
   },
   {
@@ -59,228 +118,150 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "138303 samples\n",
+      "124702 unique patients\n",
+      "20 labels\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = Dataset_Assay(data_df_emb, mut_embeddings, ref_embeddings, tumors, assays, device)\n",
+    "train_loader, test_loader = getTrainTestLoaders(dataset, batch_size = 750, collate=custom_collate_assay)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## ATTENTION MODEL WITH POSITION EMBEDDING\n",
+    "class Config_Att:\n",
+    "    n_layer: int = 3\n",
+    "    input_dim: int = 640\n",
+    "    dropout: float = 0.0\n",
+    "    bias: bool = False\n",
+    "    n_labels: int\n",
+    "    pooling : str = 'mean'\n",
+    "    norm_fn: nn.Module = nn.LayerNorm\n",
+    "    max_len : int = 1448\n",
+    "    position_embedding: bool = False\n",
+    "    num_heads: int = 1\n",
+    "\n",
+    "config_att = Config_Att()\n",
+    "config_att.n_labels = nlabels\n",
+    "\n",
+    "model = Classifier(config_att)\n",
+    "model.to(device)\n",
+    "\n",
+    "num_epochs = 15\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=.001)\n",
+    "train_assay(model,num_epochs,train_loader,test_loader, criterion, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dropped 17595 nan samples (11.04%)\n",
+      "41026 samples\n",
+      "39291 unique patients\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = Dataset_Assay_Survival(data_df_emb, mut_embeddings, ref_embeddings, tumors, assays, device, ratio=1)\n",
+    "train_loader, test_loader = getTrainTestLoaders(dataset, batch_size = 500, collate=custom_collate_assay_survival)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 904/904 [13:23<00:00,  1.13it/s, Epoch=1/15, Loss: nan] \n",
-      "TESTING: 100%|██████████| 226/226 [02:13<00:00,  1.69it/s]\n"
+      "TRAINING: 100%|██████████| 66/66 [02:10<00:00,  1.98s/it, Epoch=1/5, Loss: 4.3943]\n",
+      "TESTING: 100%|██████████| 17/17 [00:21<00:00,  1.29s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
+      "C-Index: 0.7578\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 904/904 [13:40<00:00,  1.10it/s, Epoch=2/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:25<00:00,  1.56it/s]\n"
+      "TRAINING: 100%|██████████| 66/66 [02:10<00:00,  1.98s/it, Epoch=2/5, Loss: 4.4962]\n",
+      "TESTING: 100%|██████████| 17/17 [00:21<00:00,  1.29s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
+      "C-Index: 0.7645\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 904/904 [12:34<00:00,  1.20it/s, Epoch=3/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:21<00:00,  1.60it/s]\n"
+      "TRAINING: 100%|██████████| 66/66 [02:13<00:00,  2.02s/it, Epoch=3/5, Loss: 4.3742]\n",
+      "TESTING: 100%|██████████| 17/17 [00:30<00:00,  1.82s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
+      "C-Index: 0.7679\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 904/904 [12:43<00:00,  1.18it/s, Epoch=4/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:21<00:00,  1.59it/s]\n"
+      "TRAINING: 100%|██████████| 66/66 [02:48<00:00,  2.55s/it, Epoch=4/5, Loss: 4.5242]\n",
+      "TESTING: 100%|██████████| 17/17 [00:22<00:00,  1.33s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
+      "C-Index: 0.7685\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 904/904 [11:10<00:00,  1.35it/s, Epoch=5/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [01:59<00:00,  1.88it/s]\n"
+      "TRAINING: 100%|██████████| 66/66 [02:18<00:00,  2.10s/it, Epoch=5/5, Loss: 4.4216]\n",
+      "TESTING: 100%|██████████| 17/17 [00:19<00:00,  1.15s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [11:21<00:00,  1.33it/s, Epoch=6/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:10<00:00,  1.73it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [11:26<00:00,  1.32it/s, Epoch=7/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [01:58<00:00,  1.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [10:38<00:00,  1.42it/s, Epoch=8/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [01:35<00:00,  2.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [10:49<00:00,  1.39it/s, Epoch=9/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [01:58<00:00,  1.90it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [10:48<00:00,  1.40it/s, Epoch=10/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [01:53<00:00,  1.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [11:27<00:00,  1.32it/s, Epoch=11/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [01:23<00:00,  2.72it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [14:08<00:00,  1.07it/s, Epoch=12/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:53<00:00,  1.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [15:34<00:00,  1.03s/it, Epoch=13/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:52<00:00,  1.31it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [14:58<00:00,  1.01it/s, Epoch=14/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:53<00:00,  1.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 904/904 [15:17<00:00,  1.02s/it, Epoch=15/15, Loss: nan]\n",
-      "TESTING: 100%|██████████| 226/226 [02:35<00:00,  1.45it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.15%, (33 of 22592)\n"
+      "C-Index: 0.7673\n",
+      "Best C-Index: 0.7685 at epoch 3\n"
      ]
     },
     {
@@ -298,29 +279,23 @@
     "    input_dim: int = 640\n",
     "    dropout: float = 0.0\n",
     "    bias: bool = False\n",
-    "    n_labels: int = 17\n",
+    "    n_labels: int = 1\n",
     "    pooling : str = 'mean'\n",
     "    norm_fn: nn.Module = nn.LayerNorm\n",
     "    max_len : int = 1448\n",
     "    position_embedding: bool = False\n",
+    "    num_heads: int = 1\n",
     "\n",
     "config_att = Config_Att()\n",
-    "config_att.n_labels = nlabels\n",
     "\n",
     "model = Classifier(config_att)\n",
     "model.to(device)\n",
     "\n",
-    "num_epochs = 15\n",
-    "train_assay(model,num_epochs,train_loader,test_loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## BATCH SIZE > 1 IS CAUSING NAN LOSS"
+    "num_epochs = 5\n",
+    "optimizer = optim.Adam(model.parameters(), lr=.00001)\n",
+    "criterion = negative_log_partial_likelihood\n",
+    "# train_assay_survival(model,num_epochs,train_loader,test_loader, criterion, optimizer, saveName = './best_models/model_sha_survival_uncensored.pt')\n",
+    "train_assay_survival(model,num_epochs,train_loader,test_loader, criterion, optimizer)"
    ]
   },
   {
