--- a/model/model_assays.ipynb
+++ b/model/model_assays.ipynb
@@ -19,21 +19,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 \t BINARYdata_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "12 \t BINARYdata_CANCER_TYPE_0_10percentMinCancerType.csv\n",
-      "2 \t BINARYdata_CANCER_TYPE_1_00percentMinCancerType.csv\n",
-      "4 \t BINARYdata_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
-      "11 \t BINARYdata_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
-      "9 \t BINARYdata_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
-      "6 \t data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "5 \t data_CANCER_TYPE_0_10percentMinCancerType.csv\n",
-      "10 \t data_CANCER_TYPE_1_00percentMinCancerType.csv\n",
-      "1 \t data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
-      "3 \t data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
-      "7 \t data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
-      "8 \t label_mappings\n",
-      "data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "n labels: 108\n",
+      "0 \t data_0_00_survival_ratio1.csv\n",
+      "1 \t data_0_00percentMinCancerType.csv\n",
+      "2 \t data_0_10percentMinCancerType.csv\n",
+      "5 \t data_1_00_survival_ratio1.csv\n",
+      "4 \t data_1_00percentMinCancerType.csv\n",
+      "3 \t label_mappings\n",
       "loading data from ../aa/tumors.pkl\n",
       "loading data from ../aa/assays.pkl\n"
      ]
@@ -48,15 +39,10 @@
     "data_dir = '../labeled_data/'\n",
     "labeled_data = os.listdir(data_dir)\n",
     "for ni,i in sorted(zip(labeled_data,range(len(labeled_data)))):print(i,'\\t',ni)\n",
-    "data_emb = labeled_data[6]\n",
-    "print(data_emb)\n",
-    "data_df_emb = pd.read_csv(data_dir+data_emb)\n",
     "\n",
-    "nlabels = len(data_df_emb['int_label'].unique())\n",
-    "print('n labels:',nlabels)\n",
     "device = 'cuda:1'\n",
     "\n",
-    "mut_embeddings = np.load('../aa/canonical_mut_average_embeddings_esm2.npy')\n",
+    "mut_embeddings = np.load('../aa/canonical_mut_average_embeddings_esm.npy')\n",
     "ref_embeddings = np.load('../aa/canonical_ref_embeddings_esm2.npy')\n",
     "tumors = pickleLoad('../aa/tumors.pkl')\n",
     "assays = pickleLoad('../aa/assays.pkl')"
@@ -64,79 +50,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "159445 samples\n",
-      "142745 unique patients\n",
-      "108 labels\n",
-      "\n",
-      "data_CANCER_TYPE_0_10percentMinCancerType.csv\n",
-      "157887 samples\n",
-      "141445 unique patients\n",
-      "53 labels\n",
-      "\n",
-      "data_CANCER_TYPE_1_00percentMinCancerType.csv\n",
-      "138303 samples\n",
-      "124702 unique patients\n",
-      "20 labels\n",
-      "\n",
-      "data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
-      "159445 samples\n",
-      "142745 unique patients\n",
-      "783 labels\n",
-      "\n",
-      "data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
-      "141057 samples\n",
-      "127155 unique patients\n",
-      "143 labels\n",
-      "\n",
-      "data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
-      "82664 samples\n",
-      "75447 unique patients\n",
-      "17 labels\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in [6,5,10,1,3,7]:\n",
-    "    print(labeled_data[i])\n",
-    "    df = pd.read_csv(data_dir+labeled_data[i])\n",
-    "    Dataset_Assay(df,mut_embeddings,ref_embeddings,tumors,assays,'cpu')\n",
-    "    print('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "138303 samples\n",
-      "124702 unique patients\n",
+      "data_1_00percentMinCancerType.csv\n",
+      "n labels: 20\n",
+      "145508 samples\n",
+      "131202 unique patients\n",
       "20 labels\n"
      ]
     }
    ],
    "source": [
-    "dataset = Dataset_Assay(data_df_emb, mut_embeddings, ref_embeddings, tumors, assays, device)\n",
+    "data_emb = labeled_data[4]\n",
+    "print(data_emb)\n",
+    "data_df_emb = pd.read_csv(data_dir+data_emb)\n",
+    "nlabels = len(data_df_emb['CANCER_TYPE_INT'].unique())\n",
+    "print('n labels:',nlabels)\n",
+    "\n",
+    "dataset = Dataset_Assay(data_df_emb, 'CANCER_TYPE_INT', mut_embeddings, ref_embeddings, tumors, assays, device)\n",
     "train_loader, test_loader = getTrainTestLoaders(dataset, batch_size = 750, collate=custom_collate_assay)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:47<00:00,  2.61s/it, Epoch=1/15, Loss: 1.8794]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 41.06%, (11949 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:46<00:00,  2.61s/it, Epoch=2/15, Loss: 1.6754]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 50.23%, (14619 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:45<00:00,  2.60s/it, Epoch=3/15, Loss: 1.5021]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 53.48%, (15564 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:45<00:00,  2.60s/it, Epoch=4/15, Loss: 1.4304]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 55.97%, (16288 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:45<00:00,  2.60s/it, Epoch=5/15, Loss: 1.4309]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 56.37%, (16406 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:45<00:00,  2.60s/it, Epoch=6/15, Loss: 1.5651]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 56.79%, (16527 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:46<00:00,  2.60s/it, Epoch=7/15, Loss: 1.5359]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 57.09%, (16614 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:45<00:00,  2.60s/it, Epoch=8/15, Loss: 1.3064]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.68s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 57.10%, (16617 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:46<00:00,  2.60s/it, Epoch=9/15, Loss: 1.2631]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 57.77%, (16813 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:48<00:00,  2.62s/it, Epoch=10/15, Loss: 1.4164]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 56.97%, (16579 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:57<00:00,  2.68s/it, Epoch=11/15, Loss: 1.2668]\n",
+      "TESTING: 100%|██████████| 39/39 [01:10<00:00,  1.80s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 57.74%, (16804 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:47<00:00,  2.61s/it, Epoch=12/15, Loss: 1.1815]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 57.97%, (16869 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:49<00:00,  2.62s/it, Epoch=13/15, Loss: 1.5268]\n",
+      "TESTING: 100%|██████████| 39/39 [01:05<00:00,  1.67s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 57.59%, (16759 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:56<00:00,  2.67s/it, Epoch=14/15, Loss: 1.4692]\n",
+      "TESTING: 100%|██████████| 39/39 [01:08<00:00,  1.75s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 58.06%, (16898 of 29102)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 156/156 [06:54<00:00,  2.66s/it, Epoch=15/15, Loss: 1.2313]\n",
+      "TESTING: 100%|██████████| 39/39 [01:06<00:00,  1.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 58.19%, (16934 of 29102)\n",
+      "Best Accuracy: 58.19% at epoch 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## ATTENTION MODEL WITH POSITION EMBEDDING\n",
     "class Config_Att:\n",
@@ -165,103 +343,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dropped 17595 nan samples (11.04%)\n",
-      "41026 samples\n",
-      "39291 unique patients\n"
+      "data_0_00_survival_ratio1.csv\n",
+      "43332 samples\n",
+      "41544 unique patients\n",
+      "89 cancer types\n",
+      "620 detailed cancer types\n"
      ]
     }
    ],
    "source": [
-    "dataset = Dataset_Assay_Survival(data_df_emb, mut_embeddings, ref_embeddings, tumors, assays, device, ratio=1)\n",
+    "data_emb = labeled_data[0]\n",
+    "print(data_emb)\n",
+    "data_df_emb = pd.read_csv(data_dir+data_emb)\n",
+    "dataset = Dataset_Assay_Survival(data_df_emb,mut_embeddings, ref_embeddings, tumors, assays, device)\n",
     "train_loader, test_loader = getTrainTestLoaders(dataset, batch_size = 500, collate=custom_collate_assay_survival)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 66/66 [02:10<00:00,  1.98s/it, Epoch=1/5, Loss: 4.3943]\n",
-      "TESTING: 100%|██████████| 17/17 [00:21<00:00,  1.29s/it]\n"
+      "TRAINING: 100%|██████████| 70/70 [02:02<00:00,  1.75s/it, Epoch=1/5, Loss: 3.8442]\n",
+      "TESTING: 100%|██████████| 18/18 [00:19<00:00,  1.07s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C-Index: 0.7578\n"
+      "C-Index: 0.7527\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 66/66 [02:10<00:00,  1.98s/it, Epoch=2/5, Loss: 4.4962]\n",
-      "TESTING: 100%|██████████| 17/17 [00:21<00:00,  1.29s/it]\n"
+      "TRAINING: 100%|██████████| 70/70 [02:00<00:00,  1.72s/it, Epoch=2/5, Loss: 3.9807]\n",
+      "TESTING: 100%|██████████| 18/18 [00:19<00:00,  1.07s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C-Index: 0.7645\n"
+      "C-Index: 0.7543\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 66/66 [02:13<00:00,  2.02s/it, Epoch=3/5, Loss: 4.3742]\n",
-      "TESTING: 100%|██████████| 17/17 [00:30<00:00,  1.82s/it]\n"
+      "TRAINING: 100%|██████████| 70/70 [02:00<00:00,  1.72s/it, Epoch=3/5, Loss: 3.7388]\n",
+      "TESTING: 100%|██████████| 18/18 [00:19<00:00,  1.07s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C-Index: 0.7679\n"
+      "C-Index: 0.7520\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 66/66 [02:48<00:00,  2.55s/it, Epoch=4/5, Loss: 4.5242]\n",
-      "TESTING: 100%|██████████| 17/17 [00:22<00:00,  1.33s/it]\n"
+      "TRAINING: 100%|██████████| 70/70 [02:00<00:00,  1.72s/it, Epoch=4/5, Loss: 3.7013]\n",
+      "TESTING: 100%|██████████| 18/18 [00:19<00:00,  1.06s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C-Index: 0.7685\n"
+      "C-Index: 0.7571\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 66/66 [02:18<00:00,  2.10s/it, Epoch=5/5, Loss: 4.4216]\n",
-      "TESTING: 100%|██████████| 17/17 [00:19<00:00,  1.15s/it]"
+      "TRAINING: 100%|██████████| 70/70 [02:00<00:00,  1.72s/it, Epoch=5/5, Loss: 3.8915]\n",
+      "TESTING: 100%|██████████| 18/18 [00:19<00:00,  1.06s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C-Index: 0.7673\n",
-      "Best C-Index: 0.7685 at epoch 3\n"
+      "C-Index: 0.7538\n",
+      "Best C-Index: 0.7571 at epoch 3\n"
      ]
     },
     {
