working somatt model

--- a/data_processing/mutated_sequence_generator.ipynb
+++ b/data_processing/mutated_sequence_generator.ipynb
@@ -76,7 +76,7 @@
     "        self.seqs = seqs\n",
     "    \n",
     "    def printInfo(self,idx):\n",
-    "        start,end,chrom,build,variant_class,isoforms,hgncId,gene_start,gene_end,ref_allele,strand,mutation_value,barcode = self.data[idx]\n",
+    "        start,end,chrom,build,variant_class,isoforms,hgncId,gene_start,gene_end,ref_allele,strand,mutation_value,barcode,ref_count,alt_count,assay,name = self.data[idx]\n",
     "        print('variant class:',variant_class)\n",
     "        print('mutation start:',start)\n",
     "        print('mutation end:',end)\n",
@@ -112,7 +112,7 @@
     "        return mutated_exon\n",
     "\n",
     "    def getRefAndMutatedSeq(self,idx,verbose=False):\n",
-    "        start,end,chrom,build,variant_class,isoforms,hgncId,gene_start,gene_end,ref_allele,strand,mutation,barcode = self.data[idx]\n",
+    "        start,end,chrom,build,variant_class,isoforms,hgncId,gene_start,gene_end,ref_allele,strand,mutation,barcode,ref_count,alt_count,assay,name = self.data[idx]\n",
     "\n",
     "        # ref_gene = ref_genome[gene_start-1:gene_end]\n",
     "        ref_gene = self.seqs[(build,chrom)][hgncId]\n",
